@@ -1,13 +1,20 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD package-manager-0.ebuild 742 SHA256 bbef00d3622291b29dd3b09a7226c92319253e4218ee6461c9e6f779369259c4 SHA512 6d463c21f5d56096efacea4731915459ef9b67e0f159394404cb3289b1281eadc0d25020c1873995899d4cc76eea81947ba217a8f616039d00be74776b98fae1 WHIRLPOOL 9d55ac4e6bfaef961986d3ea32fc83f0f022edfafe6f2aaaab51a943e5a29ebe51cf772f8f84ee39aa0c074c849ed550a77f84d12d114d21af4dcacb65cc23d3
-MISC ChangeLog 669 SHA256 59feffe2d9760a75dc404d208e0b9a02c8aee60263c00c075313287ab26dcaab SHA512 58459f2e58a39820b3d550530e35ca62b625fb9e3baf0dcbb239ccbbcaf5b7f72bf8506668e082247780571c7ed9611f2593f48d6722825b8ccb01cfb3cb5120 WHIRLPOOL 6ee9f97de8f20683169db1a9c31406a86cae34590e6b88c477dae5cd7c447023acb58866fc3aeb6ff376612ba0081b2c73d3e4c61e0ab2ecb2e2f497c82eb7cf
+EBUILD package-manager-0.ebuild 699 SHA256 8cd33bf3044b16480a952b99c569b196f20004e1962e6e5dda585df6dbaea93c SHA512 23a2aee7ccb5ab3220c9ed58fc562207fa1cfc6dca3b09ef625cb413faec51920cf31a2b9979fbc083cf8c13946ad2204e75cbcb964410eee3d2d0304d992e3f WHIRLPOOL 255b4d89941f572bc9aa348f0f9e34c66ad9315f09efc2907f439a03db8afc7e75a6ac9f67118ac10b3649402389c46930c12e95ba79b4ee68c8e1cac13a4442
+MISC ChangeLog 889 SHA256 31fc699a15a887e5be0a49469212da6a05e1b253a8eeb82fd0eb7af7d9a6f46b SHA512 cb5d35df5d41a3ac71d822a8f4f0d1bd82f28f05ff02ff0e71b0f1202716f8c62cba9dba82c1d5a92d9d1cdfcfc24628a4fb92fc62efdc098c015f8d4c82a102 WHIRLPOOL 4b8802282670db4a3cc5f8d647367621b7908b9de4941526bf31ac68fbb4416c5b40700ee967bb044c176a74121fbf8bccf37070f53476d8371b8e1017336d2f
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlEhOhAACgkQ/ejvha5XGaP25ACg5lIr/NMY2/x0YPNXNAp2c8jX
-mrsAn0zFCipEZvHQ2inER+HOUc1uwSGl
-=zPEE
+iQGcBAEBCAAGBQJTMpg4AAoJEJQzkH1pP7W4n4EMAI6RTqW+RQRsgpifGcYjWj9I
+D30d5ROzhPtRkHLCXHWzZfgiduft7Y6hajkyJWqiF4hKvEPrvfPkHgvNPoXBYvAz
+oyezqdv6bJKNDpVUi7BoAp7JKnZv0h75Uias4jRSFI6lui0PmvImKUYxBAERuDmC
+P8HA7BvXBfFLijAVtEAoDP+MpILVkDrVZVbIW055PzeTkttbmZwaNddu8/8KTvrW
+RJWWzQofO+BNh55Z65VZ5LbaGSUkN4MGIhcMNRtOdK11NqaHskg7IQdcFxYHXtof
+wwSa+91N0svjeSSPwLjnpPKxFZ69UWB4BFXQw4WiujSU5/o41DvAmVhRBJK0sGFk
+gpyQnudpgEGPv+mGWvRINlyMt3HgbuVQkFsExDIJp/3tcxs2bTQ0DC0QIJ1kYoLU
+EmTvKjOA2cJoIV1uDWMLCxY1p1OLIBZvG4QyZslE1ePGeKEvzY6jNWFB6ACiiKNM
+1HpGEFhgt+gLzfwjniGd4YLA4CHW41MSExxsiKi0bg==
+=XEz2
 -----END PGP SIGNATURE-----
