@@ -1,6 +1,12 @@
 # ChangeLog for virtual/package-manager
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/package-manager/ChangeLog,v 1.4 2013/02/17 20:14:06 zmedico Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/package-manager/ChangeLog,v 1.6 2014/03/26 08:58:21 ulm Exp $
+
+  26 Mar 2014; Ulrich Müller <ulm@gentoo.org> package-manager-0.ebuild:
+  Update to EAPI 5. Remove empty variable assignments.
+
+  18 Jan 2014; Mike Frysinger <vapier@gentoo.org> package-manager-0.ebuild:
+  Add arm64 love.
 
   17 Feb 2013; Zac Medico <zmedico@gentoo.org> package-manager-0.ebuild:
   Add ~arm-linux keyword.
